# learning-journal

./: AGENTS.md  CURRENT_PROGRESS.md  DAILY_CHECK.md  LICENSE  README.md
docs/: LEARNING_LOG.md
docs/notes/: 2026-07-02-AI-Agent技术知识手册.md  2026-07-02-搭建学习仓库.md
docs/resources/: AI-Agent转型学习路线.md  AI-Agent面试满分速查.md  RAG与Function-Calling核心知识点.md  learning-roadmap.md  reading-list.md  后端面试满分速查.md  周迭代学习SOP.md  学习方法论执行手册.md  每日学习执行指南.md  能力自检矩阵.md
interview/: questions-bank.json
projects/: project-A-RAG智能知识库.md  project-A-直播电商AI营销助手.md  project-B-AI运维Copilot.md  project-B-直播电商OnCall助手.md  unified-ai-agent-platform.md  直播电商智能助手.md
projects/week1-quickstart/: .env.example  01_hello_ai.py  02_prompt_playground.py  03_function_calling.py  04_streaming_chat.py  05_mini_rag.py  README.md  pyproject.toml
projects/week1-quickstart/mcp-demo/: README.md  mcp_client_demo.py  mock_prometheus_server.py
scripts/: new-note.sh  new-summary.sh  new-week.sh  quiz.sh
templates/: note-template.md  summary-template.md  weekly-plan-template.md
weekly/: W1-Hello-AI-入门启动周.md
